# 2D-3D-images-filter

./: CMakeLists.txt  Doxyfile  README.md  advanced_programming_group_binary_search  main.cpp  references.md
data/: image.csv  kernel.csv  volume.csv
doxydoc/html/: slice__test_8cpp.html  slice__test_8cpp__incl.dot  slice__test_8cpp_a04f2766d18d932e4b995ff6e92311405_icgraph.dot  slice__test_8cpp_a676c2d50093c02c4112544c03433a399_icgraph.dot  slice__test_8cpp_adb8db5daceae73f2635c3c88f003da1f_icgraph.dot  slice__test_8cpp_ae4f6a1c2a9156a0b85c6128ae70f2d93_cgraph.dot  slice__test_8cpp_ae4f6a1c2a9156a0b85c6128ae70f2d93_icgraph.dot  slice__test_8h.html  slice__test_8h__dep__incl.dot  slice__test_8h__incl.dot  slice__test_8h_a04f2766d18d932e4b995ff6e92311405_cgraph.dot  slice__test_8h_a676c2d50093c02c4112544c03433a399_cgraph.dot  slice__test_8h_a6efde995f45f45560c37c38cccb16de8_cgraph.dot  slice__test_8h_a6efde995f45f45560c37c38cccb16de8_icgraph.dot  slice__test_8h_adb8db5daceae73f2635c3c88f003da1f_cgraph.dot  slice__test_8h_source.html  sorting_8cpp.html  sorting_8cpp__incl.dot  sorting_8cpp_a122477ff017bfcc1520ede811b14a64e_cgraph.dot  sorting_8cpp_a122477ff017bfcc1520ede811b14a64e_icgraph.dot  sorting_8cpp_a3a85cc153019c55732188ca76ffd3c9b_cgraph.dot  sorting_8cpp_a3a85cc153019c55732188ca76ffd3c9b_icgraph.dot  sorting_8h.html  sorting_8h__dep__incl.dot  sorting_8h__incl.dot  sorting_8h_source.html  (+54 more)
include/: BrightnessFilter.h  Conv2DFilter.h  Conv3DFilter.h  EdgeFilter.h  Filter.h  GreyscaleFilter.h  HistogramEqualisationFilter.h  Image.h  Matrix.h  NoiseFilter.h  Projection.h  Slice.h  ThresholdingFilter.h  UserInterface.h  Volume.h
lib/: BrightnessFilter.cpp  Conv2DFilter.cpp  Conv3DFilter.cpp  EdgeFilter.cpp  Filter.cpp  GreyscaleFilter.cpp  HistogramEqualisationFilter.cpp  Image.cpp  Matrix.cpp  NoiseFilter.cpp  Projection.cpp  Slice.cpp  ThresholdingFilter.cpp  UserInterface.cpp  Volume.cpp
python/: main.py  plot.py
tests/: brightness_test.cpp  brightness_test.h  conv2d_test.cpp  conv2d_test.h  conv3d_test.cpp  conv3d_test.h  edge_test.cpp  edge_test.h  greyscale_test.cpp  greyscale_test.h  histogram_equalisation_test.cpp  histogram_equalisation_test.h  image_test.cpp  image_test.h  matrix_test.cpp  matrix_test.h  noise_test.cpp  noise_test.h  projection_test.cpp  projection_test.h  run_tests.cpp  slice_test.cpp  slice_test.h  thresholding_test.cpp  thresholding_test.h  utils_test.cpp  utils_test.h
(+70 files in other folders)
